UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Customer_Response_Line__c.object
<CustomObject>
    <fields>
        <fullName>Awarded_General_Category__c</fullName>
        <description>It is for only for RFP Position Wise Analysis(RFP Bids)</description>
        <label>Awarded General Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Line_Item_Extn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item Extn</label>
        <referenceTo>Phoenix_BidLineItemExtn__c</referenceTo>
        <relationshipLabel>Customer Response Lines</relationshipLabel>
        <relationshipName>Customer_Response_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Duration__c</fullName>
        <description>This field calculates the duration by the customer to respond to the proposal sent</description>
        <formula>Phoenix_Customer_Response__r.Phoenix_Customer_Response_Date__c -  Phoenix_Bid__r.Phoenix_Sent_to_Customer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Response Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Direct_Price__c</fullName>
        <label>Final Direct Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Indirect_Price__c</fullName>
        <label>Final Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>General_Category__c</fullName>
        <description>It is for only for RFP Position Wise Analysis(RFP Bids)</description>
        <label>Current General Category</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Award_Position__c</fullName>
        <label>Award Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Awarded_Quantity__c</fullName>
        <label>Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Customer Response Lines</relationshipLabel>
        <relationshipName>Customer_Response_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Status__c</fullName>
        <label>Bid Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>Declined by Customer</fullName>
                </value>
                <value>
                    <fullName>DRL Rescinded</fullName>
                </value>
                <value>
                    <fullName>DRL submitting under New Bid Number</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <label>Pending with Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Customer Response Lines</relationshipLabel>
        <relationshipName>Customer_Response_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_CR_Direct_Mrktng_Price__c</fullName>
        <label>Phoenix_CR_Direct_Mrktng_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CR_Indirect_Mrktng_Price__c</fullName>
        <label>Phoenix_CR_Indirect_Mrktng_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cardinal_Rebate_Per__c</fullName>
        <formula>Bid_Line_Item_Extn__r.Phoenix_Preferred_Cardinal_Rebate_per__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phoenix Cardinal Rebate Per</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Case_Pack__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_Case_Pack__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Pack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Decline_Reasons__c</fullName>
        <label>Customer Decline Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response - Closing Bid</fullName>
                </value>
                <value>
                    <fullName>Declined - No reason given</fullName>
                </value>
                <value>
                    <fullName>Declined - Pricing not competitive</fullName>
                </value>
                <value>
                    <fullName>Declined - Customer no longer requires</fullName>
                </value>
                <value>
                    <fullName>Declined - Incument defended</fullName>
                </value>
                <value>
                    <fullName>Declined - Lead time not acceptable</fullName>
                </value>
                <value>
                    <fullName>Declined - Other</fullName>
                </value>
                <value>
                    <fullName>DRL submitting under new bid number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Response_Date__c</fullName>
        <formula>Phoenix_Customer_Response__r.Phoenix_Customer_Response_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Response</label>
        <referenceTo>Phoenix_Customer_Response__c</referenceTo>
        <relationshipLabel>Customer Response Lines</relationshipLabel>
        <relationshipName>Customer_Response_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_status_internal_use__c</fullName>
        <label>Customer status- internal use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Approvd_Pricing_Contracts__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_Current_Price_Calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Approved Pricing (Contracts)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Total_Selling_Unit__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_Final_Total_Selling_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Selling Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Lead_Time_Days__c</fullName>
        <formula>TEXT(Phoenix_Bid_Line_Item__r.Phoenix_Estimated_Lead_Time_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_MOQ__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_MOQ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_Rebate_per__c</fullName>
        <formula>Bid_Line_Item_Extn__r.Phoenix_Major_Rebate_per__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phoenix Major Rebate per</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Mck_Proposed_Position__c</fullName>
        <label>Mck Proposed Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDC Change Line Item</label>
        <referenceTo>Phoenix_NDC_Change_Line_Item__c</referenceTo>
        <relationshipLabel>Customer Response Lines</relationshipLabel>
        <relationshipName>Customer_Response_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change_Status__c</fullName>
        <label>NDC Change Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>Declined by Customer</fullName>
                </value>
                <value>
                    <fullName>DRL Rescinded</fullName>
                </value>
                <value>
                    <fullName>DRL submitting under New Bid Number</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Pending with Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDC Change</label>
        <referenceTo>Phoenix_NDC_Change__c</referenceTo>
        <relationshipLabel>Customer Response Lines</relationshipLabel>
        <relationshipName>Customer_Response_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_National_Drug_Code__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_NDC_National_Drug_Code__c</formula>
        <label>NDC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_OTC_Customer_Comments__c</fullName>
        <label>OTC Customer Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Pkg_Size__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_Pkg_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pkg Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Effective_Date__c</fullName>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Family__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_Product_Family__c</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Name__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_DSH_Contract_Price__c</fullName>
        <label>Proposed DSH Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate__c</fullName>
        <formula>if( Phoenix_Bid_Line_Item__r.Phoenix_Bid_Template_Refrence__c = &apos;ClarusOne&apos;,IF( Phoenix_Bid_Line_Item__r.Phoenix_Opening_Order_TPT_Per__c =0, Phoenix_Bid__r.Phoenix_Customer__r.Phoenix_Rebates__c ,Phoenix_Bid_Line_Item__r.Phoenix_Opening_Order_TPT_Per__c),
Phoenix_Bid_Line_Item__r.Phoenix_Proposed_Current_Rebate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Retail_Direct_Marketing_Price__c</fullName>
        <label>Retail Direct Marketing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Retail_Indirect_Marketing_Price__c</fullName>
        <label>Retail Indirect Marketing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Number__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_Product_Code__c</formula>
        <label>SAP Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Supply_Effective_Date__c</fullName>
        <label>Supply Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_is_Vistex_Noti_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Vistex Noti Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used to store GCP Product Family</description>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Customer Response Lines</relationshipLabel>
        <relationshipName>Customer_Response_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Position__c</fullName>
        <description>It is for only for RFP Position Wise Analysis(RFP Bids)</description>
        <label>Current Product Position(NPR)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retail_Indirect_Net_Marketing__c</fullName>
        <label>Retail Indirect Net (Marketing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Awarded_Responses_Excluded__c</fullName>
        <description>This Field only used for Report</description>
        <formula>IF( TEXT(Phoenix_Bid_Status__c) &lt;&gt; &apos;Awarded&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Awarded Responses (Excluded)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Awarded_Responses__c</fullName>
        <description>This field only used for Report purpose</description>
        <formula>IF(TEXT(Phoenix_Bid_Status__c)= &apos;Awarded&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Awarded Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vistex_Comments__c</fullName>
        <description>This field only used for report purpose</description>
        <formula>Phoenix_Customer_Response__r.Phoenix_Vistex_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vistex Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Price__c</fullName>
        <label>Wholesaler Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Customer Response Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Customer_Response__c</columns>
        <columns>Phoenix_Bid_Line_Item__c</columns>
        <columns>Phoenix_NDC_National_Drug_Code__c</columns>
        <columns>Phoenix_SAP_Number__c</columns>
        <columns>Phoenix_Pkg_Size__c</columns>
        <columns>Phoenix_Bid_Status__c</columns>
        <columns>Phoenix_Customer_Decline_Reasons__c</columns>
        <columns>Phoenix_Award_Position__c</columns>
        <columns>Phoenix_Awarded_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRLineItem-{0000000}</displayFormat>
        <label>Customer Response Line No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Response Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>